Added simple to do for sections in book

--- a/DaeCode.ipynb
+++ b/DaeCode.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "source": [
+    "# Group Members\n",
+    "1848660 - Rutendo Jambwa\n",
+    "1852529 - Bohlokoa Tilo\n",
+    "1908649 - Tieho Ramphore\n",
+    "1908664 - Thando Peter"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "marked-segment",
@@ -400,33 +411,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\nInt64Index: 30110 entries, 0 to 30109\nData columns (total 180 columns):\n #   Column                                 Non-Null Count  Dtype   \n---  ------                                 --------------  -----   \n 0   Household_Identifier                   30110 non-null  int32   \n 1   Sample_Origin                          30110 non-null  category\n 2   Month_DOB                              23892 non-null  category\n 3   Year_DOB                               23892 non-null  category\n 4   Gender                                 23892 non-null  category\n 5   Population_Group                       23892 non-null  category\n 6   Married_Cohabitation                   6813 non-null   category\n 7   Years_Married                          5677 non-null   category\n 8   Years_Cohabiting                       1851 non-null   category\n 9   Current_Relationship_Status            1178 non-null   category\n 10  Given_Birth                            14111 non-null  category\n 11  Birth_Count                            11105 non-null  category\n 12  Biological_Children_Living             11105 non-null  category\n 13  Mother_Degrees                         16154 non-null  category\n 14  Mother_Highest_Tertiary                804 non-null    category\n 15  Father_Highest_Tertiary                30110 non-null  object  \n 16  Employment_Payment                     23892 non-null  category\n 17  Primary_Occupation                     6969 non-null   category\n 18  Primary_Gross_Income_Month             6969 non-null   category\n 19  Primary_Net_Income_Month               6969 non-null   category\n 20  Main_Job_Income_Category               307 non-null    category\n 21  Work_Week_Hours                        6969 non-null   category\n 22  Rec_Share_Profit_Year                  6969 non-null   category\n 23  Share_Profit_Year                      116 non-null    category\n 24  Rec_Share_Profit_Month                 116 non-null    category\n 25  Share_Profit_Month                     17 non-null     category\n 26  Rec_Bonus_Year                         6969 non-null   category\n 27  Other_Bonus_Year                       822 non-null    category\n 28  Rec_Bonus_Month                        822 non-null    category\n 29  Other_Bonus_Month                      60 non-null     category\n 30  Rec_Extra_Income_Year                  6969 non-null   category\n 31  Extra_Income_Year                      210 non-null    category\n 32  Rec_Extra_Income_Month                 210 non-null    category\n 33  Extra_Income_Month                     60 non-null     category\n 34  Have_Secondary_Occupation              6969 non-null   category\n 35  Secondary_Gross_Income                 51 non-null     category\n 36  Secondary_Net_Income                   51 non-null     category\n 37  Secondary_Income_Category              1 non-null      category\n 38  Is_Self_Employed                       23892 non-null  category\n 39  Net_After_Liabilities                  1153 non-null   category\n 40  Amount_Left_Over                       459 non-null    category\n 41  Month_Take_Home_Salary                 187 non-null    category\n 42  Pension                                23891 non-null  category\n 43  Pension_Amount                         2897 non-null   category\n 44  Disability_Grant                       23891 non-null  category\n 45  Disability_Grant_Amount                624 non-null    category\n 46  Child_Support                          23891 non-null  category\n 47  Child_Support_Amount                   5931 non-null   category\n 48  Foster_Care_Grant                      23891 non-null  category\n 49  Foster_Care_Grant_Amount               320 non-null    category\n 50  Dependency_Grant                       23891 non-null  category\n 51  Dependency_Grant_Amount                101 non-null    category\n 52  Grant_In_Aid                           23891 non-null  category\n 53  Grant_In_Aid_Amount                    13 non-null     category\n 54  War_Veterans_Pension                   23891 non-null  category\n 55  War_Veterans_Pension_Amount            2 non-null      category\n 56  UIF                                    23891 non-null  category\n 57  UIF_Amount                             51 non-null     category\n 58  Workers_Compensation                   23891 non-null  category\n 59  Workers_Compensation_Amount            24 non-null     category\n 60  Provident_Fund                         23891 non-null  category\n 61  Provident_Fund_Amount                  285 non-null    category\n 62  Private_Retirement_Annuity             23891 non-null  category\n 63  Private_Retirement_Annuity_Amount      83 non-null     category\n 64  Retirement_Package                     23891 non-null  category\n 65  Retirement_Package_Amount              33 non-null     category\n 66  Rental_Income                          23891 non-null  category\n 67  Rental_Income_Amount                   245 non-null    category\n 68  Interest_Earnings                      23891 non-null  category\n 69  Interest_Earnings_Amount               73 non-null     category\n 70  Retrenchment_Package                   23891 non-null  category\n 71  Retrenchment_Package_Amount            11 non-null     category\n 72  Inheritances                           23891 non-null  category\n 73  Inheritances_Amount                    40 non-null     category\n 74  Lobola                                 23891 non-null  category\n 75  Lobola_Amount                          4 non-null      category\n 76  Gifts                                  23891 non-null  category\n 77  Gifts_Amount                           74 non-null     category\n 78  Loan_Repayments                        23891 non-null  category\n 79  Loan_Repayments_Amount                 57 non-null     category\n 80  Sale_Household_Goods                   23891 non-null  category\n 81  Sale_Household_Goods_Amount            19 non-null     category\n 82  Other_Income                           23891 non-null  category\n 83  Other_Income_Recipient                 30110 non-null  object  \n 84  Other_Income_Value                     55 non-null     category\n 85  Non_Household_Residents_Contributions  23892 non-null  category\n 86  GRNT_TYP                               1610 non-null   category\n 87  GRNT_RCVD_BY_WHO                       1610 non-null   category\n 88  HGST_GR_CMPLT                          23891 non-null  category\n 89  YR_CMPLT                               22165 non-null  category\n 90  AGE_CMPLT                              4332 non-null   category\n 91  NCS_PASS_TYP                           2825 non-null   category\n 92  UNI_EXMPTN                             4049 non-null   category\n 93  HGST_GR_MATH                           22165 non-null  category\n 94  OTHR_GR_MATH                           30110 non-null  object  \n 95  TERTIARY                               22165 non-null  category\n 96  HGST_LVL_TER                           4521 non-null   category\n 97  OTHR_LVL_TER                           30110 non-null  object  \n 98  YR_TER_CMPLT                           4521 non-null   category\n 99  REP_SCH_GRDS                           10591 non-null  category\n 100 STUDENT                                10591 non-null  category\n 101 CURR_EDU_LVL                           30110 non-null  object  \n 102 COMP_LITRTE                            23891 non-null  category\n 103 ENG_RDNG_LVL                           22797 non-null  category\n 104 ENG_WRTNG_LVL                          22797 non-null  category\n 105 HH_DCSN_MKR                            23892 non-null  category\n 106 HH_DCSN_MKR2                           23851 non-null  category\n 107 DCSN_LRG_PRCH                          23892 non-null  category\n 108 DCSN_LRG_PRCH2                         23808 non-null  category\n 109 PRF_LVNG_AREA                          23891 non-null  category\n 110 HH_INCME_CLSS                          23891 non-null  category\n 111 INCME_STP_15                           23891 non-null  category\n 112 INCME_STP_5YR                          23891 non-null  category\n 113 EXP_INCME_5YR                          20096 non-null  category\n 114 LIFE_SATIF_LVL_                        23891 non-null  category\n 115 HAPPINSS_LVL                           23891 non-null  category\n 116 TRST_SA_PPL                            23891 non-null  category\n 117 INCME_INHRTNC                          23891 non-null  category\n 118 INCME_JOB_PYOUT                        23891 non-null  category\n 119 INCME_PTY_PRFT                         23891 non-null  category\n 120 INCME_FINAN_PRDCT                      23891 non-null  category\n 121 INCME_LOBOLA                           23891 non-null  category\n 122 OTHER_LGR_INCME                        23891 non-null  category\n 123 OWN_VEHCL                              23891 non-null  category\n 124 VEHCL_VAL_AMT                          2406 non-null   category\n 125 OWN_M0TCYCL                            23891 non-null  category\n 126 MOTCYCL_VAL_AMT                        116 non-null    category\n 127 OWN_COMP                               23891 non-null  category\n 128 OWN_CELL                               23891 non-null  category\n 129 HME_LOAN_BOND                          23891 non-null  category\n 130 HME_LOAN_BAL                           576 non-null    category\n 131 HME_BAL_JOINT                          576 non-null    category\n 132 OWN_PTY                                23891 non-null  category\n 133 PTY_DBT_JOINT                          46 non-null     category\n 134 CAR_PYMNT                              23891 non-null  category\n 135 CAR_PYMNT_BAL                          648 non-null    category\n 136 CAR_BAL_JOINT                          648 non-null    category\n 137 BNK_PRSNL_LOAN                         23891 non-null  category\n 138 BNK_LOAN_BAL                           1488 non-null   category\n 139 MICRO_LNDR_LOAN                        23891 non-null  category\n 140 ML_LOAN_BAL                            165 non-null    category\n 141 BNK_STDY_LOAN                          23891 non-null  category\n 142 STDY_LOAN_BAL                          58 non-null     category\n 143 OTHR_STDY_LOAN                         23891 non-null  category\n 144 OSTDY_LOAN_BAL                         80 non-null     category\n 145 CRDT_CRD                               23891 non-null  category\n 146 CRDT_CRD_BAL                           869 non-null    category\n 147 STORE_ACC                              23891 non-null  category\n 148 STORE_ACC_BAL                          3476 non-null   category\n 149 HIRE_PUR_AGRMNT                        23891 non-null  category\n 150 HIRE_PUR_BAL                           569 non-null    category\n 151 FAM_MEM_LOAN                           23891 non-null  category\n 152 FAM_LOAN_BAL                           289 non-null    category\n 153 FRND_LOAN                              23891 non-null  category\n 154 FRND_LOAN_BAL                          618 non-null    category\n 155 MASHN_LOAN                             23891 non-null  category\n 156 MASHN_LOAN_BAL                         370 non-null    category\n 157 EMPLOYR_LOAN                           23891 non-null  category\n 158 EMPLOYR_LOAN_BAL                       70 non-null     category\n 159 UNPD_TAX                               23891 non-null  category\n 160 UNPD_TAX_BAL                           24 non-null     category\n 161 MONTHLY_ARRS                           23891 non-null  category\n 162 MONTHLY_ARRS_BAL                       105 non-null    category\n 163 OTHR_DEBTS                             23891 non-null  category\n 164 NOT_OTHR_DEBT                          30110 non-null  object  \n 165 OTHR_DEBT_BAL                          243 non-null    category\n 166 LIFE_INSRNC                            23891 non-null  category\n 167 PEN_RETMNT_ANNTY                       23891 non-null  category\n 168 PEN_RETMNT_AMT                         1274 non-null   category\n 169 PEN_RETMNT_CATGRY                      808 non-null    category\n 170 UNTTRST_STKS_SHRS                      23891 non-null  category\n 171 UT_SS_AMT                              185 non-null    category\n 172 UT_SS_CATGRY                           79 non-null     category\n 173 STKVL_SAVNGSCLB                        23891 non-null  category\n 174 BNK_ACC                                23891 non-null  category\n 175 BNK_ACC_BAL                            12392 non-null  category\n 176 BNK_ACC_CATGRY                         1764 non-null   category\n 177 OD_ACC_CATEGRY                         19 non-null     category\n 178 NET_VAL_HH_POSSNS                      23891 non-null  category\n 179 POS_VAL_LFTOVR                         9323 non-null   category\ndtypes: category(173), int32(1), object(6)\nmemory usage: 9.0+ MB\nRows with missing data:  3054847\nNumber of columns with missing values:  172\n"
+     ]
+    }
+   ],
    "source": [
     "#Viewing data types in dataframe\n",
-    "df_filtered.info(verbose=True,null_counts=True)"
+    "df_filtered.info(verbose=True,null_counts=True)\n",
+    "#Viewing number of null entries\n",
+    "nrows_missing = df_filtered.isnull().sum().sum()\n",
+    "print('Rows with missing data: ',nrows_missing)\n",
+    "ncols_missing=len(df_missing)\n",
+    "print('Number of columns with missing values: ',ncols_missing)"
    ]
   },
   {
    "source": [
-    "As can be seen in the above the information each column has a set data type that is adhered to throughout the dataset, this means the data present follows a set of decided categories, is a value, or is null. "
+    "As can be seen in the above the information each column has a set data type that is adhered to throughout the dataset, this means the data present follows a set of decided categories, is a value, or is null. Given the above it can be seen that most columns have null values, this is due to the nature of questioning, there are many factors that a participant may not be part of which are then left null. Included in the dataframe are sample entries which contain null values, given that they have unique house_identifier codes they can be cross-referenced to exisitng entries and be removed if they don't match other entries in the dataframe."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "#Viewing number of null entries\n",
-    "# nrows_missing = df_filtered.isnull().sum().sum()\n",
-    "# print('Rows with missing data: ',nrows_missing)\n",
-    "# ncols_missing=len(df_missing)\n",
-    "# print('Number of columns with missing values: ',ncols_missing)"
-   ]
+    "Wrangling TO-DO:\n",
+    "- Remove Duplicates (cross reference sample entries and remove if unique)\n",
+    "- Calculate net worth\n",
+    "- Construct relation databases\n",
+    "\n",
+    "Exploratory Anal:\n",
+    "- Drop Nans for visuals"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
