Data description and group members at top of doc

--- a/DaeCode.ipynb
+++ b/DaeCode.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "marked-segment",
    "metadata": {
     "editable": false,
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "illegal-buffalo",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "later-metro",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "id": "still-aggregate",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
     "\n",
     "### Quality Analysis\n",
     "\n",
-    "After having analysed the whole dataset it can be stated that the data is of good quality. Is it **Valid**,is it **Accurate**, is it **Complete**, is it **Consistent**, is it **Uniform**\n"
+    "After having analysed the whole dataset it can be stated that the data is of good quality. Specific details are highlighted and discussed below.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -277,7 +277,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 32,
+   "execution_count": 38,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -398,20 +398,21 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Household_Identifier</th>\n      <th>Sample_Origin</th>\n      <th>Month_DOB</th>\n      <th>Year_DOB</th>\n      <th>Gender</th>\n      <th>Population_Group</th>\n      <th>Married_Cohabitation</th>\n      <th>Years_Married</th>\n      <th>Years_Cohabiting</th>\n      <th>Current_Relationship_Status</th>\n      <th>...</th>\n      <th>UNTTRST_STKS_SHRS</th>\n      <th>UT_SS_AMT</th>\n      <th>UT_SS_CATGRY</th>\n      <th>STKVL_SAVNGSCLB</th>\n      <th>BNK_ACC</th>\n      <th>BNK_ACC_BAL</th>\n      <th>BNK_ACC_CATGRY</th>\n      <th>OD_ACC_CATEGRY</th>\n      <th>NET_VAL_HH_POSSNS</th>\n      <th>POS_VAL_LFTOVR</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>500000</td>\n      <td>2017 sample</td>\n      <td>March</td>\n      <td>1980</td>\n      <td>Male</td>\n      <td>Coloured</td>\n      <td>Formally married</td>\n      <td>5</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>Yes</td>\n      <td>Dont know</td>\n      <td>Refused</td>\n      <td>NaN</td>\n      <td>Something left over</td>\n      <td>150000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>500001</td>\n      <td>2008 sample</td>\n      <td>October</td>\n      <td>1993</td>\n      <td>Male</td>\n      <td>African</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>Yes</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Don't know</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>500002</td>\n      <td>2008 sample</td>\n      <td>September</td>\n      <td>1979</td>\n      <td>Female</td>\n      <td>African</td>\n      <td>Formally married</td>\n      <td>13</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Yes</td>\n      <td>Yes</td>\n      <td>4000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Something left over</td>\n      <td>Dont know</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>500002</td>\n      <td>2008 sample</td>\n      <td>August</td>\n      <td>1972</td>\n      <td>Male</td>\n      <td>African</td>\n      <td>Formally married</td>\n      <td>15</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>Yes</td>\n      <td>10000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Something left over</td>\n      <td>Dont know</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>500003</td>\n      <td>2008 sample</td>\n      <td>December</td>\n      <td>1967</td>\n      <td>Male</td>\n      <td>African</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Refused</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>500003</td>\n      <td>2008 sample</td>\n      <td>December</td>\n      <td>1991</td>\n      <td>Female</td>\n      <td>African</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>Yes</td>\n      <td>1500</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Don't know</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>500003</td>\n      <td>2008 sample</td>\n      <td>April</td>\n      <td>1954</td>\n      <td>Female</td>\n      <td>African</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>Yes</td>\n      <td>4000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Don't know</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>500003</td>\n      <td>2008 sample</td>\n      <td>February</td>\n      <td>1977</td>\n      <td>Male</td>\n      <td>African</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>Yes</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Don't know</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>500004</td>\n      <td>2008 sample</td>\n      <td>June</td>\n      <td>1967</td>\n      <td>Female</td>\n      <td>African</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>Yes</td>\n      <td>400</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Something left over</td>\n      <td>8000</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>500005</td>\n      <td>2008 sample</td>\n      <td>June</td>\n      <td>1977</td>\n      <td>Male</td>\n      <td>Coloured</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>Yes</td>\n      <td>1070</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Something left over</td>\n      <td>360000</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>500006</td>\n      <td>2008 sample</td>\n      <td>February</td>\n      <td>1993</td>\n      <td>Female</td>\n      <td>African</td>\n      <td>Living together</td>\n      <td>NaN</td>\n      <td>8</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Something left over</td>\n      <td>200000</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>500006</td>\n      <td>2008 sample</td>\n      <td>November</td>\n      <td>1972</td>\n      <td>Female</td>\n      <td>African</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Yes</td>\n      <td>Yes</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Something left over</td>\n      <td>90000</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>500006</td>\n      <td>2008 sample</td>\n      <td>September</td>\n      <td>1954</td>\n      <td>Female</td>\n      <td>African</td>\n      <td>Formally married</td>\n      <td>46</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Yes</td>\n      <td>Yes</td>\n      <td>7000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Something left over</td>\n      <td>10000</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>500006</td>\n      <td>2008 sample</td>\n      <td>September</td>\n      <td>1950</td>\n      <td>Male</td>\n      <td>African</td>\n      <td>Formally married</td>\n      <td>46</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>Yes</td>\n      <td>Dont know</td>\n      <td>R5,000</td>\n      <td>NaN</td>\n      <td>Breakeven</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>500006</td>\n      <td>2008 sample</td>\n      <td>October</td>\n      <td>1989</td>\n      <td>Male</td>\n      <td>African</td>\n      <td>Living together</td>\n      <td>NaN</td>\n      <td>8</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>Yes</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Something left over</td>\n      <td>300000</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>500007</td>\n      <td>2008 sample</td>\n      <td>February</td>\n      <td>1968</td>\n      <td>Male</td>\n      <td>African</td>\n      <td>Formally married</td>\n      <td>7</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Yes</td>\n      <td>Yes</td>\n      <td>Refused</td>\n      <td>R5,001-R49,999</td>\n      <td>NaN</td>\n      <td>Something left over</td>\n      <td>300000</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>500007</td>\n      <td>2008 sample</td>\n      <td>July</td>\n      <td>1983</td>\n      <td>Female</td>\n      <td>African</td>\n      <td>Formally married</td>\n      <td>7</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>Yes</td>\n      <td>3500</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Breakeven</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>500008</td>\n      <td>2008 sample</td>\n      <td>June</td>\n      <td>1998</td>\n      <td>Male</td>\n      <td>African</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Breakeven</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>500008</td>\n      <td>2008 sample</td>\n      <td>February</td>\n      <td>1960</td>\n      <td>Male</td>\n      <td>African</td>\n      <td>NaN</td>\n      <td>20</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>No</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No</td>\n      <td>Yes</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Breakeven</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>500009</td>\n      <td>2008 sample</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>20 rows × 180 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 38
     }
    ]
   },
   {
    "source": [
-    "Off of the first set of entries it can be seen that all the entries follow a standard that was prioritised during data collection. This also means that the values are consistent and realistic. "
+    "Off of the first set of entries it can be seen that all the entries follow a standard that was prioritised during data collection. This also means that the values are consistent and realistic. \n",
+    "### Expand on this??"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +435,11 @@
   },
   {
    "source": [
-    "As can be seen in the above the information each column has a set data type that is adhered to throughout the dataset, this means the data present follows a set of decided categories, is a value, or is null. Given the above it can be seen that most columns have null values, this is due to the nature of questioning, there are many factors that a participant may not be part of which are then left null. Included in the dataframe are sample entries which contain null values, given that they have unique house_identifier codes they can be cross-referenced to exisitng entries and be removed if they don't match other entries in the dataframe."
+    "As can be seen in the above the information each column has a set data type that is adhered to throughout the dataset, this means the data present follows a set of decided categories, is a value, or is null. Given the above it can be seen that most columns have null values, this is due to the nature of questioning, there are many factors that a participant may not be part of which are then left null. Included in the dataframe are sample entries which contain null values, given that they have unique house_identifier codes they can be cross-referenced to exisitng entries and be removed if they don't match other entries in the dataframe.\n",
+    "\n",
+    "Given the size of the dataset and number of present variables per entry we feel that the above dataframe is more than adequate to answer the questions we have regarding income/wealth levels and how they may relate to a series of determining factors.\n",
+    "\n",
+    "# Still needed: data validations"
    ],
    "cell_type": "markdown",
    "metadata": {}
