names with breaks, income to wealth, no more anal

--- a/DaeCode.ipynb
+++ b/DaeCode.ipynb
@@ -462,7 +462,7 @@
     "- Calculate net worth\n",
     "- Construct relation databases\n",
     "\n",
-    "Exploratory Anal:\n",
+    "Exploratory Analysis:\n",
     "- Drop Nans for visuals"
    ],
    "cell_type": "markdown",
